# hackathon-2023-kukhaowin

./: README.md
kuhackathon-frontend/: package-lock.json  package.json  tailwind.config.js
kuhackathonbackend/: .gitignore  docker-compose.prod.yml  docker-compose.yml  dockerfile  dockerfile.prod  jenkinsfile  manage.py  pyproject.toml  setup.sh
kuhackathonbackend/KUConnect/: apps.py  models.py  serializers.py  urls.py  views.py
kuhackathonbackend/KUConnect/management/commands/: fakeevent.py  fakepost.py
kuhackathonbackend/KUConnect/migrations/: 0001_initial.py  0002_eventjoin.py  0003_eventpost.py
kuhackathonbackend/KUPartime/: apps.py  models.py  serializers.py  urls.py  views.py
kuhackathonbackend/KUPartime/management/commands/: fakepartime.py  fakeprofile.py
kuhackathonbackend/KUPartime/migrations/: 0001_initial.py  0002_alter_partimeprofilehistory_status.py  0002_partimepost_image_poster.py  0003_profilespartime.py  0003_rename_user_profilespartime_user_id.py  0004_rename_user_id_profilespartime_user.py
kuhackathonbackend/Nginx/: django.conf
kuhackathonbackend/User/: models.py  serializers.py  urls.py  views.py
kuhackathonbackend/User/management/commands/: fakeuser.py
kuhackathonbackend/User/migrations/: 0001_initial.py  0002_alter_userprofiles_events.py  0002_userprofiles_advisor_userprofiles_birth_date_and_more.py  0003_remove_userprofiles_groups_and_more.py  0003_userprofiles_favorites_events.py  0004_remove_userprofiles_events.py  0005_userprofiles_events.py
kuhackathonbackend/kuhackathonbackend/: asgi.py  settings.py  urls.py  wsgi.py
(+70 files in other folders)
